# centpai

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
app/: config.py  database.py  main.py  models.py  polling_test.py
app/bot/: commands.py
app/core/: config.py  errors.py
app/db/: database.py
app/features/expenses/: dto.py  errors.py  models.py  repo.py  service.py
app/features/telegram/: client.py  context.py  schemas.py
app/features/telegram/commands/: admin.py  command_parser.py  expenses.py  members.py
app/models/: models.py
app/telegram/: client.py  schemas.py
src/centpai/: config.py  database.py  logging_config.py  polling_test.py
src/centpai/bot/: commands.py
src/centpai/telegram/: client.py  schemas.py
